// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanPrice allows class name overriding 1`] = `
<span
  className="notranslate"
>
  <span
    className="abcd-class"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders as 0 if flat discount is greater than price 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <s
        className="DiscountedLabel"
      >
        $
        9
      </s>
      <strong>
        $
        0
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders correctly 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders correctly for 30 day free plan 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
     for 30 days
     for free
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders correctly for CSM inclusion 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  />
  <span
    className="SupportLabel"
  >
    Customer Success Manager included.
  </span>
</span>
`;

exports[`PlanPrice renders correctly for eternal free plan 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
     for free
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders correctly with hourly plans 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <strong>
        $
        0.012
      </strong>
      /
      hr
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders flat discount 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <s
        className="DiscountedLabel"
      >
        $
        9
      </s>
      <strong>
        $
        4
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders free ip 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  >
    First dedicated IP address is free
  </span>
</span>
`;

exports[`PlanPrice renders free ip and overage correct 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  >
    $0.75/ thousand extra emails. 
    First dedicated IP address is free
  </span>
</span>
`;

exports[`PlanPrice renders nothing when no plan 1`] = `""`;

exports[`PlanPrice renders percent discount 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <s
        className="DiscountedLabel"
      >
        $
        9
      </s>
      <strong>
        $
        6.75
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  />
</span>
`;

exports[`PlanPrice renders with overage 1`] = `
<span
  className="notranslate"
>
  <span
    className="MainLabel"
  >
    <strong>
      50,000
    </strong>
     emails
    /month
    <span>
       at 
      <strong>
        $
        9
      </strong>
      /
      mo
    </span>
  </span>
  <span
    className="SupportLabel"
  >
    $0.75/ thousand extra emails. 
  </span>
</span>
`;
